--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
   <!-- CONTACT US -->
   <section id="kontak" class="bg-indigo-600 text-white py-12 px-4 md:px-6 text-center">
     <h2 class="text-2xl md:text-3xl font-bold mb-6">Hubungi Kami</h2>
-    <p class="mb-4">Untuk info lebih lanjut, silakan hubungi admin kami:</p>
+    <p class="mb-4">Untuk info lebih lanjut, silakan hubungi admin kami : Yanti:</p>
     <a href="tel:+6288218359001" class="text-lg font-semibold underline hover:text-gray-200">
       +62 882 1835 9001
     </a>
@@ -215,3 +215,4 @@
 
 </body>
 </html>
+
