--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <h2 class="text-2xl md:text-3xl font-bold mb-6">Tonton di YouTube</h2>
     <div class="max-w-3xl mx-auto">
       <iframe class="w-full h-60 md:h-80 rounded-xl shadow-lg"
-        src="https://www.youtube.com/embed/UC6mQ5KC1JdBWZ6tz9rGWfpQ"
+        src="https://www.youtube.com/embed/1nbdhDqQNGs"
         title="YouTube video" frameborder="0" allowfullscreen>
       </iframe>
     </div>
@@ -215,4 +215,5 @@
 
 </body>
 </html>
+
 
