--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     </form>
     <script>
       // Script koneksi ke Google Spreadsheet
-      const scriptURL = "YOUR_GOOGLE_APPS_SCRIPT_WEB_APP_URL"; 
+      const scriptURL = "https://script.google.com/macros/s/AKfycbyLFKOUi3KiDwZ_jr8IRY8egNWt-xDKnKptzpafwqXEPa780hvGMWEVal-vybCrJmiu/execL"; 
       const form = document.getElementById("pendaftaranForm");
       form.addEventListener("submit", e => {
         e.preventDefault();
@@ -215,5 +215,6 @@
 
 </body>
 </html>
+
 
 
