--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Christopher Abimanyu Singing Course</title>
+  <title>Christopher Abimanyu Singing School</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     function toggleMenu() {
@@ -163,7 +163,7 @@
     </form>
     <script>
       // Script koneksi ke Google Spreadsheet
-      const scriptURL = "https://script.google.com/macros/s/AKfycbyLFKOUi3KiDwZ_jr8IRY8egNWt-xDKnKptzpafwqXEPa780hvGMWEVal-vybCrJmiu/execL"; 
+      const scriptURL = "https://script.google.com/macros/s/AKfycbyLFKOUi3KiDwZ_jr8IRY8egNWt-xDKnKptzpafwqXEPa780hvGMWEVal-vybCrJmiu/exec"; 
       const form = document.getElementById("pendaftaranForm");
       form.addEventListener("submit", e => {
         e.preventDefault();
@@ -215,6 +215,7 @@
 
 </body>
 </html>
+
 
 
 
