--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
   <!-- NAVBAR -->
   <nav class="bg-indigo-700 text-white p-4 shadow-md fixed top-0 w-full z-50">
     <div class="max-w-6xl mx-auto flex justify-between items-center">
-      <h1 class="text-lg md:text-xl font-bold">CA Singing School</h1>
-      <!-- Desktop Menu -->
+      <h1 class="text-lg md:text-xl font-bold">CA Singing Course</h1>
       <div class="hidden md:flex space-x-6">
         <a href="#about" class="hover:text-gray-300">Tentang</a>
         <a href="#program" class="hover:text-gray-300">Program</a>
@@ -28,7 +27,6 @@
         <a href="#daftar" class="hover:text-gray-300">Daftar</a>
         <a href="#kontak" class="hover:text-gray-300">Contact</a>
       </div>
-      <!-- Mobile Menu Button -->
       <button class="md:hidden" onclick="toggleMenu()">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none"
              viewBox="0 0 24 24" stroke="currentColor">
@@ -37,7 +35,6 @@
         </svg>
       </button>
     </div>
-    <!-- Mobile Menu -->
     <div id="mobileMenu" class="hidden md:hidden flex flex-col mt-2 space-y-2">
       <a href="#about" class="block px-4 py-2 hover:bg-indigo-600">Tentang</a>
       <a href="#program" class="block px-4 py-2 hover:bg-indigo-600">Program</a>
@@ -182,9 +179,8 @@
     </div>
   </footer>
 
-  <!-- SCRIPT FETCH EVENT + FORM -->
+  <!-- SCRIPT EVENT -->
   <script>
-    // URL GAS Web App
     const eventURL = "https://script.google.com/macros/s/AKfycbyLFKOUi3KiDwZ_jr8IRY8egNWt-xDKnKptzpafwqXEPa780hvGMWEVal-vybCrJmiu/exec";
 
     // Fetch Event
@@ -211,16 +207,6 @@
         document.getElementById("eventList").innerHTML = "<p class='text-red-600'>Gagal memuat event!</p>";
         console.error(err);
       });
-
-    // Form Pendaftaran
-    const form = document.getElementById("pendaftaranForm");
-    form.addEventListener("submit", e => {
-      e.preventDefault();
-      fetch(eventURL, { method: "POST", body: new FormData(form)})
-        .then(response => alert("Pendaftaran berhasil!"))
-        .catch(error => alert("Error! " + error.message));
-      form.reset();
-    });
   </script>
 
 </body>
