--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- NAVBAR -->
   <nav class="bg-indigo-700 text-white p-4 shadow-md fixed top-0 w-full z-50">
     <div class="max-w-6xl mx-auto flex justify-between items-center">
-      <h1 class="text-lg md:text-xl font-bold">CA Singing Course</h1>
+      <h1 class="text-lg md:text-xl font-bold">CA Singing School</h1>
       <div class="hidden md:flex space-x-6">
         <a href="#about" class="hover:text-gray-300">Tentang</a>
         <a href="#program" class="hover:text-gray-300">Program</a>
@@ -49,7 +49,7 @@
 
   <!-- HERO -->
   <section class="bg-gradient-to-r from-indigo-600 to-purple-600 text-white text-center py-32 px-6 mt-14">
-    <h1 class="text-3xl md:text-5xl font-bold mb-4">Christopher Abimanyu Singing Course</h1>
+    <h1 class="text-3xl md:text-5xl font-bold mb-4">Christopher Abimanyu Singing School</h1>
     <p class="text-base md:text-xl mb-6">Kursus vokal profesional di Bandung & online bersama penyanyi tenor Indonesia</p>
     <a href="#daftar" class="bg-white text-indigo-700 px-5 py-3 rounded-lg font-semibold hover:bg-gray-100">
       Daftar Sekarang
@@ -60,7 +60,7 @@
   <section id="about" class="py-12 px-4 md:px-6 max-w-5xl mx-auto text-center">
     <h2 class="text-2xl md:text-3xl font-bold mb-6">Tentang Kami</h2>
     <p>
-      Christopher Abimanyu Singing Course berlokasi di <b>Jl. Sangkuriang A3, Dago – Bandung</b>. 
+      Christopher Abimanyu Singing School berlokasi di <b>Jl. Sangkuriang A3, Dago – Bandung</b>. 
       Fokus kami adalah <b>kelas vokal</b>, dipandu langsung oleh <b>Christopher Abimanyu</b> (penyanyi tenor Indonesia) 
       bersama tutor berpengalaman. Jadwal fleksibel Senin–Sabtu, tersedia juga <b>kelas online</b>.
     </p>
@@ -94,7 +94,7 @@
     <div class="max-w-4xl mx-auto grid gap-6 sm:grid-cols-2">
       <div class="bg-white p-6 rounded-lg shadow-md">
         <h3 class="font-bold text-lg mb-2">Senin – Rabu – Jumat</h3>
-        <p>16.00 - 18.00 WIB → Vokal Dasar</p>
+        <p>09.00 - 18.00 WIB → Vokal Dasar</p>
         <p>18.30 - 20.00 WIB → Vokal Lanjutan</p>
       </div>
       <div class="bg-white p-6 rounded-lg shadow-md">
@@ -211,3 +211,4 @@
 
 </body>
 </html>
+
