--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
   <footer class="bg-indigo-700 text-white text-center py-6 mt-12">
     <p>© 2025 Christopher Abimanyu Singing Course. Semua Hak Dilindungi.</p>
     <div class="flex justify-center gap-6 mt-4">
-      <a href="https://instagram.com/YOUR_INSTAGRAM" target="_blank">📸 Instagram</a>
-      <a href="https://youtube.com/YOUR_YOUTUBE" target="_blank">▶️ YouTube</a>
+      <a href="https://www.instagram.com/casssingingschool/" target="_blank">📸 Instagram</a>
+      <a href="https://www.youtube.com/@christopherabimanyusinging8206" target="_blank">▶️ YouTube</a>
       <a href="https://tiktok.com/@YOUR_TIKTOK" target="_blank">🎵 TikTok</a>
     </div>
   </footer>
@@ -211,4 +211,5 @@
 
 </body>
 </html>
+
 
