--- a/index.html
+++ b/index.html
@@ -5,18 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Christopher Abimanyu Singing School</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
   <script>
     function toggleMenu() {
       document.getElementById("mobileMenu").classList.toggle("hidden");
     }
   </script>
+  <style>
+    body { font-family: 'Poppins', sans-serif; }
+    .gradient-text {
+      @apply bg-clip-text text-transparent bg-gradient-to-r from-pink-500 via-purple-500 to-orange-400;
+    }
+  </style>
 </head>
 <body class="font-sans bg-gray-50 text-gray-800">
 
   <!-- NAVBAR -->
   <nav class="bg-indigo-700 text-white p-4 shadow-md fixed top-0 w-full z-50">
     <div class="max-w-6xl mx-auto flex justify-between items-center">
-      <h1 class="text-lg md:text-xl font-bold">CA Singing School</h1>
+      <h1 class="text-lg md:text-xl font-extrabold gradient-text">CASS</h1>
       <div class="hidden md:flex space-x-6">
         <a href="#about" class="hover:text-gray-300">Tentang</a>
         <a href="#program" class="hover:text-gray-300">Program</a>
@@ -49,7 +56,7 @@
 
   <!-- HERO -->
   <section class="bg-gradient-to-r from-indigo-600 to-purple-600 text-white text-center py-32 px-6 mt-14">
-    <h1 class="text-3xl md:text-5xl font-bold mb-4">Christopher Abimanyu Singing School</h1>
+    <h1 class="text-3xl md:text-5xl font-extrabold mb-4 gradient-text">Christopher Abimanyu Singing School</h1>
     <p class="text-base md:text-xl mb-6">Kursus vokal profesional di Bandung & online bersama penyanyi tenor Indonesia</p>
     <a href="#daftar" class="bg-white text-indigo-700 px-5 py-3 rounded-lg font-semibold hover:bg-gray-100">
       Daftar Sekarang
@@ -211,5 +218,6 @@
 
 </body>
 </html>
+
 
 
