--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
   <!-- ABOUT -->
   <section id="about" class="py-12 px-4 md:px-6 max-w-5xl mx-auto text-center">
-    <h2 class="text-2xl md:text-3xl font-bold mb-6">Tentang Kami</h2>
+  <h2 class="text-2xl md:text-3xl font-extrabold mb-6 gradient-text">Tentang Kami</h2>
     <p>
       Christopher Abimanyu Singing School berlokasi di <b>Jl. Sangkuriang A3, Dago – Bandung</b>. 
       Fokus kami adalah <b>kelas vokal</b>, dipandu langsung oleh <b>Christopher Abimanyu</b> (penyanyi tenor Indonesia) 
@@ -75,7 +75,7 @@
 
   <!-- PROGRAM -->
   <section id="program" class="py-12 px-4 md:px-6 max-w-6xl mx-auto">
-    <h2 class="text-2xl md:text-3xl font-bold text-center mb-8">Program Vokal Kami</h2>
+  <h2 class="text-2xl md:text-3xl font-extrabold text-center mb-8 gradient-text">Program Vokal Kami</h2>
     <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
       <div class="bg-white shadow-md rounded-xl p-6 text-center hover:shadow-lg">
         <img src="https://img.icons8.com/color/96/microphone.png" class="mx-auto mb-4" alt="Vokal Dasar">
@@ -97,7 +97,7 @@
 
   <!-- JADWAL -->
   <section id="jadwal" class="bg-gray-100 py-12 px-4 md:px-6">
-    <h2 class="text-2xl md:text-3xl font-bold text-center mb-8">Jadwal Kelas</h2>
+  <h2 class="text-2xl md:text-3xl font-extrabold text-center mb-8 gradient-text">Jadwal Kelas</h2>
     <div class="max-w-4xl mx-auto grid gap-6 sm:grid-cols-2">
       <div class="bg-white p-6 rounded-lg shadow-md">
         <h3 class="font-bold text-lg mb-2">Senin – Rabu – Jumat</h3>
@@ -114,7 +114,7 @@
 
   <!-- EVENT -->
   <section id="event" class="py-12 px-4 md:px-6 bg-gradient-to-r from-yellow-100 via-white to-yellow-50">
-    <h2 class="text-2xl md:text-3xl font-bold text-center mb-8">Event & Kegiatan</h2>
+  <h2 class="text-2xl md:text-3xl font-extrabold text-center mb-8 gradient-text">Event & Kegiatan</h2>
     <div id="eventList" class="max-w-5xl mx-auto space-y-6 text-center">
       <p class="text-gray-500">Memuat data event...</p>
     </div>
@@ -122,7 +122,7 @@
 
   <!-- GALERI -->
   <section id="galeri" class="py-12 px-4 md:px-6 max-w-6xl mx-auto">
-    <h2 class="text-2xl md:text-3xl font-bold text-center mb-8">Galeri Kegiatan</h2>
+  <h2 class="text-2xl md:text-3xl font-extrabold text-center mb-8 gradient-text">Galeri Kegiatan</h2>
     <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
       <img src="foto1.jpg" alt="Foto kegiatan 1" class="rounded-xl shadow-md w-full h-60 object-cover">
       <img src="foto2.jpg" alt="Foto kegiatan 2" class="rounded-xl shadow-md w-full h-60 object-cover">
@@ -132,7 +132,7 @@
 
   <!-- YOUTUBE -->
   <section id="youtube" class="bg-gray-100 py-12 px-4 md:px-6 text-center">
-    <h2 class="text-2xl md:text-3xl font-bold mb-6">Tonton di YouTube</h2>
+  <h2 class="text-2xl md:text-3xl font-extrabold mb-6 gradient-text"Tonton di YouTube</h2>
     <div class="max-w-3xl mx-auto">
       <iframe class="w-full h-60 md:h-80 rounded-xl shadow-lg"
         src="https://www.youtube.com/embed/1nbdhDqQNGs"
@@ -143,7 +143,7 @@
 
   <!-- FORM PENDAFTARAN -->
   <section id="daftar" class="py-12 px-4 md:px-6 max-w-3xl mx-auto">
-    <h2 class="text-2xl md:text-3xl font-bold text-center mb-8">Formulir Pendaftaran</h2>
+  <h2 class="text-2xl md:text-3xl font-extrabold text-center mb-8 gradient-text">>Formulir Pendaftaran</h2>
     <form id="pendaftaranForm" class="bg-white shadow-lg rounded-xl p-6 md:p-8 space-y-6">
       <div>
         <label class="block mb-2 font-medium">Nama Lengkap</label>
@@ -169,7 +169,7 @@
 
   <!-- CONTACT US -->
   <section id="kontak" class="bg-indigo-600 text-white py-12 px-4 md:px-6 text-center">
-    <h2 class="text-2xl md:text-3xl font-bold mb-6">Hubungi Kami</h2>
+  <h2 class="text-2xl md:text-3xl font-extrabold mb-6 gradient-text">Hubungi Kami</h2>
     <p class="mb-4">Untuk info lebih lanjut, silakan hubungi admin kami : Yanti:</p>
     <a href="tel:+6288218359001" class="text-lg font-semibold underline hover:text-gray-200">
       +62 882 1835 9001
@@ -218,6 +218,7 @@
 
 </body>
 </html>
+
 
 
 
