--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <style>
     body { font-family: 'Poppins', sans-serif; }
     .gradient-text {
-      @apply bg-clip-text text-transparent bg-gradient-to-r from-pink-500 via-purple-500 to-orange-400;
+      background: linear-gradient(to right, #ec4899, #8b5cf6, #f97316);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
     }
   </style>
 </head>
@@ -65,7 +67,7 @@
 
   <!-- ABOUT -->
   <section id="about" class="py-12 px-4 md:px-6 max-w-5xl mx-auto text-center">
-  <h2 class="text-2xl md:text-3xl font-extrabold mb-6 gradient-text">Tentang Kami</h2>
+    <h2 class="text-2xl md:text-3xl font-extrabold mb-6 gradient-text">Tentang Kami</h2>
     <p>
       Christopher Abimanyu Singing School berlokasi di <b>Jl. Sangkuriang A3, Dago – Bandung</b>. 
       Fokus kami adalah <b>kelas vokal</b>, dipandu langsung oleh <b>Christopher Abimanyu</b> (penyanyi tenor Indonesia) 
@@ -75,7 +77,7 @@
 
   <!-- PROGRAM -->
   <section id="program" class="py-12 px-4 md:px-6 max-w-6xl mx-auto">
-  <h2 class="text-2xl md:text-3xl font-extrabold text-center mb-8 gradient-text">Program Vokal Kami</h2>
+    <h2 class="text-2xl md:text-3xl font-extrabold text-center mb-8 gradient-text">Program Vokal Kami</h2>
     <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
       <div class="bg-white shadow-md rounded-xl p-6 text-center hover:shadow-lg">
         <img src="https://img.icons8.com/color/96/microphone.png" class="mx-auto mb-4" alt="Vokal Dasar">
@@ -97,7 +99,7 @@
 
   <!-- JADWAL -->
   <section id="jadwal" class="bg-gray-100 py-12 px-4 md:px-6">
-  <h2 class="text-2xl md:text-3xl font-extrabold text-center mb-8 gradient-text">Jadwal Kelas</h2>
+    <h2 class="text-2xl md:text-3xl font-extrabold text-center mb-8 gradient-text">Jadwal Kelas</h2>
     <div class="max-w-4xl mx-auto grid gap-6 sm:grid-cols-2">
       <div class="bg-white p-6 rounded-lg shadow-md">
         <h3 class="font-bold text-lg mb-2">Senin – Rabu – Jumat</h3>
@@ -114,7 +116,7 @@
 
   <!-- EVENT -->
   <section id="event" class="py-12 px-4 md:px-6 bg-gradient-to-r from-yellow-100 via-white to-yellow-50">
-  <h2 class="text-2xl md:text-3xl font-extrabold text-center mb-8 gradient-text">Event & Kegiatan</h2>
+    <h2 class="text-2xl md:text-3xl font-extrabold text-center mb-8 gradient-text">Event & Kegiatan</h2>
     <div id="eventList" class="max-w-5xl mx-auto space-y-6 text-center">
       <p class="text-gray-500">Memuat data event...</p>
     </div>
@@ -122,7 +124,7 @@
 
   <!-- GALERI -->
   <section id="galeri" class="py-12 px-4 md:px-6 max-w-6xl mx-auto">
-  <h2 class="text-2xl md:text-3xl font-extrabold text-center mb-8 gradient-text">Galeri Kegiatan</h2>
+    <h2 class="text-2xl md:text-3xl font-extrabold text-center mb-8 gradient-text">Galeri Kegiatan</h2>
     <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
       <img src="foto1.jpg" alt="Foto kegiatan 1" class="rounded-xl shadow-md w-full h-60 object-cover">
       <img src="foto2.jpg" alt="Foto kegiatan 2" class="rounded-xl shadow-md w-full h-60 object-cover">
@@ -132,7 +134,7 @@
 
   <!-- YOUTUBE -->
   <section id="youtube" class="bg-gray-100 py-12 px-4 md:px-6 text-center">
-  <h2 class="text-2xl md:text-3xl font-extrabold mb-6 gradient-text"Tonton di YouTube</h2>
+    <h2 class="text-2xl md:text-3xl font-extrabold mb-6 gradient-text">Tonton di YouTube</h2>
     <div class="max-w-3xl mx-auto">
       <iframe class="w-full h-60 md:h-80 rounded-xl shadow-lg"
         src="https://www.youtube.com/embed/1nbdhDqQNGs"
@@ -143,7 +145,7 @@
 
   <!-- FORM PENDAFTARAN -->
   <section id="daftar" class="py-12 px-4 md:px-6 max-w-3xl mx-auto">
-  <h2 class="text-2xl md:text-3xl font-extrabold text-center mb-8 gradient-text">>Formulir Pendaftaran</h2>
+    <h2 class="text-2xl md:text-3xl font-extrabold text-center mb-8 gradient-text">Formulir Pendaftaran</h2>
     <form id="pendaftaranForm" class="bg-white shadow-lg rounded-xl p-6 md:p-8 space-y-6">
       <div>
         <label class="block mb-2 font-medium">Nama Lengkap</label>
@@ -154,11 +156,16 @@
         <input name="email" type="email" class="w-full border rounded-lg p-3" required>
       </div>
       <div>
+        <label class="block mb-2 font-medium">No. Telepon</label>
+        <input name="telp" type="tel" class="w-full border rounded-lg p-3" required>
+      </div>
+      <div>
         <label class="block mb-2 font-medium">Pilih Program</label>
-        <select name="program" class="w-full border rounded-lg p-3">
-          <option>Vokal Dasar</option>
-          <option>Vokal Lanjutan</option>
-          <option>Masterclass</option>
+        <select name="program" class="w-full border rounded-lg p-3" required>
+          <option value="">-- Pilih Program --</option>
+          <option value="Vokal Dasar">Vokal Dasar</option>
+          <option value="Vokal Lanjutan">Vokal Lanjutan</option>
+          <option value="Masterclass">Masterclass</option>
         </select>
       </div>
       <button type="submit" class="w-full bg-indigo-600 text-white py-3 rounded-lg font-semibold hover:bg-indigo-700">
@@ -169,7 +176,7 @@
 
   <!-- CONTACT US -->
   <section id="kontak" class="bg-indigo-600 text-white py-12 px-4 md:px-6 text-center">
-  <h2 class="text-2xl md:text-3xl font-extrabold mb-6 gradient-text">Hubungi Kami</h2>
+    <h2 class="text-2xl md:text-3xl font-extrabold mb-6 gradient-text">Hubungi Kami</h2>
     <p class="mb-4">Untuk info lebih lanjut, silakan hubungi admin kami : Yanti:</p>
     <a href="tel:+6288218359001" class="text-lg font-semibold underline hover:text-gray-200">
       +62 882 1835 9001
@@ -190,7 +197,6 @@
   <script>
     const eventURL = "https://script.google.com/macros/s/AKfycbyLFKOUi3KiDwZ_jr8IRY8egNWt-xDKnKptzpafwqXEPa780hvGMWEVal-vybCrJmiu/exec";
 
-    // Fetch Event
     fetch(eventURL)
       .then(res => res.json())
       .then(events => {
@@ -216,9 +222,39 @@
       });
   </script>
 
+  <!-- SCRIPT FORM -->
+  <script>
+    const form = document.getElementById("pendaftaranForm");
+
+    form.addEventListener("submit", function(e) {
+      e.preventDefault();
+
+      const formData = {
+        nama: form.nama.value,
+        email: form.email.value,
+        telp: form.telp.value,
+        program: form.program.value
+      };
+
+      fetch("https://script.google.com/macros/s/AKfycbwQbEK4i_aGzOF9If9FtNdpgXFX-fVU1iAhyfnNgJVoAMRgFPBwSNo9EKyZhJTLXc8F2g/exec", {
+        method: "POST",
+        body: JSON.stringify(formData)
+      })
+      .then(res => res.json())
+      .then(data => {
+        if(data.status === "success"){
+          alert("✅ Pendaftaran berhasil dikirim!");
+          form.reset();
+        } else {
+          alert("⚠️ Terjadi kesalahan: " + data.message);
+        }
+      })
+      .catch(err => {
+        console.error(err);
+        alert("❌ Gagal mengirim pendaftaran!");
+      });
+    });
+  </script>
+
 </body>
 </html>
-
-
-
-
