--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   <section id="galeri" class="py-12 px-4 md:px-6 max-w-6xl mx-auto">
     <h2 class="text-2xl md:text-3xl font-extrabold text-center mb-8 gradient-text">Galeri Kegiatan</h2>
     <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
-      <img src="foto1.jpg" alt="Foto kegiatan 1" class="rounded-xl shadow-md w-full h-60 object-cover">
+      <img src="assets/cass1.png" alt="Foto kegiatan 1" class="rounded-xl shadow-md w-full h-60 object-cover">
       <img src="foto2.jpg" alt="Foto kegiatan 2" class="rounded-xl shadow-md w-full h-60 object-cover">
       <img src="foto3.jpg" alt="Foto kegiatan 3" class="rounded-xl shadow-md w-full h-60 object-cover">
     </div>
@@ -258,3 +258,4 @@
 
 </body>
 </html>
+
