--- a/index.html
+++ b/index.html
@@ -123,14 +123,25 @@
   </section>
 
   <!-- GALERI -->
-  <section id="galeri" class="py-12 px-4 md:px-6 max-w-6xl mx-auto">
-    <h2 class="text-2xl md:text-3xl font-extrabold text-center mb-8 gradient-text">Galeri Kegiatan</h2>
-    <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
-      <img src="assets/cass1.png" alt="Foto kegiatan 1" class="rounded-xl shadow-md w-full h-60 object-cover">
-      <img src="foto2.jpg" alt="Foto kegiatan 2" class="rounded-xl shadow-md w-full h-60 object-cover">
-      <img src="foto3.jpg" alt="Foto kegiatan 3" class="rounded-xl shadow-md w-full h-60 object-cover">
+ <section id="galeri" class="py-12 px-4 md:px-6 max-w-6xl mx-auto">
+  <h2 class="text-2xl md:text-3xl font-extrabold text-center mb-8 gradient-text">Galeri Kegiatan</h2>
+  <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
+    
+    <div class="w-full h-60 overflow-hidden rounded-xl shadow-md">
+      <img src="assets/cass1.png" alt="Foto kegiatan 1" class="w-full h-full object-cover">
     </div>
-  </section>
+
+    <div class="w-full h-60 overflow-hidden rounded-xl shadow-md">
+      <img src="foto2.jpg" alt="Foto kegiatan 2" class="w-full h-full object-cover">
+    </div>
+
+    <div class="w-full h-60 overflow-hidden rounded-xl shadow-md">
+      <img src="foto3.jpg" alt="Foto kegiatan 3" class="w-full h-full object-cover">
+    </div>
+
+  </div>
+</section>
+
 
   <!-- YOUTUBE -->
   <section id="youtube" class="bg-gray-100 py-12 px-4 md:px-6 text-center">
@@ -258,4 +269,5 @@
 
 </body>
 </html>
+
 
