--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
     </div>
 
     <div class="w-full h-60 overflow-hidden rounded-xl shadow-md">
-      <img src="cass2.png" alt="Foto kegiatan 2" class="w-full h-full object-cover">
+      <img src="assets/cass2.png" alt="Foto kegiatan 2" class="w-full h-full object-cover">
     </div>
 
     <div class="w-full h-60 overflow-hidden rounded-xl shadow-md">
-      <img src="cass3.png" alt="Foto kegiatan 3" class="w-full h-full object-cover">
+      <img src="assets/cass3.png" alt="Foto kegiatan 3" class="w-full h-full object-cover">
     </div>
 
   </div>
@@ -269,6 +269,7 @@
 
 </body>
 </html>
+
 
 
 
