--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
     
     <div class="w-full h-60 overflow-hidden rounded-xl shadow-md">
-      <img src="assets/cass1.png" alt="Foto kegiatan 1" class="w-full h-full object-cover">
+      <img src="assets/CASS1.jpg" alt="Foto kegiatan 1" class="w-full h-full object-cover">
     </div>
 
     <div class="w-full h-60 overflow-hidden rounded-xl shadow-md">
@@ -152,7 +152,7 @@
     </div>
 
     <div class="w-full h-60 overflow-hidden rounded-xl shadow-md">
-      <img src="assets/cass3.png" alt="Foto kegiatan 3" class="w-full h-full object-cover">
+      <img src="assets/CASS4.jpg" alt="Foto kegiatan 3" class="w-full h-full object-cover">
     </div>
 
   </div>
@@ -285,6 +285,7 @@
 
 </body>
 </html>
+
 
 
 
