--- a/index.html
+++ b/index.html
@@ -60,12 +60,19 @@
     <a href="#kontak" class="block px-4 py-2 hover:bg-indigo-600">Kontak</a>
   </div>
 </nav>
-
+  
 <!-- HERO -->
-<section id="hero" class="bg-gradient-to-r from-indigo-600 to-pink-500 text-white text-center pb-32 px-6">
-  <h1 class="text-3xl md:text-5xl font-extrabold mb-4 gradient-text">Christopher Abimanyu Singing School</h1>
-  <p class="text-base md:text-xl mb-6">Belajar vokal profesional dengan suasana fun & ceria 🎵</p>
-  <a href="#daftar" class="bg-yellow-400 text-indigo-900 px-6 py-3 rounded-lg font-bold hover:bg-yellow-300 transition">
+<section id="hero" 
+  class="bg-gradient-to-r from-indigo-600 to-pink-500 text-white text-center px-6 flex flex-col justify-center items-center"
+  style="min-height: 100vh;">
+  <h1 class="text-3xl md:text-5xl font-extrabold mb-4 gradient-text">
+    Christopher Abimanyu Singing School
+  </h1>
+  <p class="text-base md:text-xl mb-6">
+    Belajar vokal profesional dengan suasana fun & ceria 🎵
+  </p>
+  <a href="#daftar" 
+     class="bg-yellow-400 text-indigo-900 px-6 py-3 rounded-lg font-bold hover:bg-yellow-300 transition">
     Daftar Sekarang
   </a>
 </section>
@@ -144,9 +151,15 @@
   <h2 class="text-2xl md:text-3xl font-extrabold text-center mb-8 gradient-text">📸 Galeri Kegiatan</h2>
   <div class="swiper">
     <div class="swiper-wrapper">
-      <div class="swiper-slide"><img src="assets/CASS1.JPG" alt="Foto 1"></div>
-      <div class="swiper-slide"><img src="assets/cass2.png" alt="Foto 2"></div>
-      <div class="swiper-slide"><img src="assets/cass3.png" alt="Foto 3"></div>
+      <div class="swiper-slide flex items-center justify-center bg-black">
+        <img src="assets/CASS1.JPG" alt="Foto 1" class="max-h-full max-w-full object-contain">
+      </div>
+      <div class="swiper-slide flex items-center justify-center bg-black">
+        <img src="assets/cass2.png" alt="Foto 2" class="max-h-full max-w-full object-contain">
+      </div>
+      <div class="swiper-slide flex items-center justify-center bg-black">
+        <img src="assets/cass3.png" alt="Foto 3" class="max-h-full max-w-full object-contain">
+      </div>
     </div>
     <!-- Navigasi -->
     <div class="swiper-pagination"></div>
@@ -155,13 +168,11 @@
   </div>
 </section>
 
-<script>
-  new Swiper(".swiper", {
-    loop: true,
-    pagination: { el: ".swiper-pagination", clickable: true },
-    navigation: { nextEl: ".swiper-button-next", prevEl: ".swiper-button-prev" },
-  });
-</script>
+<style>
+  .swiper { width: 100%; height: 400px; border-radius: 16px; }
+  .swiper-slide { display: flex; align-items: center; justify-content: center; }
+  .swiper-slide img { max-height: 100%; max-width: 100%; object-fit: contain; }
+</style>
 
 <!-- YOUTUBE -->
 <section id="youtube" class="bg-blue-50 py-12 px-4 md:px-6 text-center">
@@ -285,3 +296,4 @@
 
 </body>
 </html>
+
