--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <img src="assets/cass2.png" alt="Foto 2" class="max-h-full max-w-full object-contain">
       </div>
       <div class="swiper-slide flex items-center justify-center bg-black">
-        <img src="assets/cass3.png" alt="Foto 3" class="max-h-full max-w-full object-contain">
+        <img src="assets/CASS4.jpg" alt="Foto 3" class="max-h-full max-w-full object-contain">
       </div>
     </div>
     <!-- Navigasi -->
@@ -317,5 +317,6 @@
 
 </body>
 </html>
+
 
 
