--- a/index.html
+++ b/index.html
@@ -99,6 +99,29 @@
   </p>
 </section>
 
+  <!-- FOUNDER PROFILE -->
+<section id="founder" class="py-16 px-6 bg-gradient-to-r from-pink-100 via-yellow-50 to-blue-100">
+  <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-10 items-center">
+    <!-- Foto Founder -->
+    <div class="flex justify-center">
+      <img src="assets/founder.jpg" alt="Christopher Abimanyu" 
+           class="rounded-2xl shadow-lg max-h-96 object-cover"/>
+    </div>
+    <!-- Deskripsi -->
+    <div>
+      <h2 class="text-3xl font-extrabold gradient-text mb-4">👨‍🎤 Founder Kami</h2>
+      <h3 class="text-xl font-bold mb-2">Christopher Abimanyu</h3>
+      <p class="text-lg leading-relaxed">
+        Christopher Abimanyu adalah seorang <b>penyanyi tenor Indonesia</b> 
+        yang telah tampil di berbagai panggung nasional maupun internasional. 
+        Beliau mendirikan <b>Christopher Abimanyu Singing School</b> dengan visi 
+        membimbing generasi muda untuk menemukan suara terbaik mereka 
+        melalui teknik vokal yang benar, ekspresi musikal, dan rasa percaya diri.
+      </p>
+    </div>
+  </div>
+</section>
+  
 <!-- PROGRAM -->
 <section id="program" class="py-12 px-4 md:px-6 max-w-6xl mx-auto">
   <h2 class="text-2xl md:text-3xl font-extrabold text-center mb-8 gradient-text">🎶 Program Vokal Kami</h2>
@@ -219,19 +242,38 @@
 <!-- CONTACT US -->
 <section id="kontak" class="bg-indigo-600 text-white py-12 px-4 md:px-6 text-center">
   <h2 class="text-2xl md:text-3xl font-extrabold mb-6 gradient-text">☎️ Hubungi Kami</h2>
-  <p class="mb-4">Untuk info lebih lanjut, silakan hubungi admin kami: Yanti</p>
+  <p class="mb-4">Untuk info lebih lanjut, hubungi saudari: Yanti</p>
   <a href="tel:+6288218359001" class="text-lg font-semibold underline hover:text-gray-200">
     +62 882 1835 9001
   </a>
 </section>
 
 <!-- FOOTER -->
-<footer class="bg-indigo-700 text-white text-center py-6 mt-12">
-  <p>© 2025 Christopher Abimanyu Singing Course. Semua Hak Dilindungi.</p>
-  <div class="flex justify-center gap-6 mt-4">
-    <a href="https://www.instagram.com/casssingingschool/" target="_blank">📸 Instagram</a>
-    <a href="https://www.youtube.com/@christopherabimanyusinging8206" target="_blank">▶️ YouTube</a>
-    <a href="https://tiktok.com/@YOUR_TIKTOK" target="_blank">🎵 TikTok</a>
+<footer class="relative bg-gradient-to-r from-indigo-700 via-purple-700 to-pink-600 text-white text-center py-10 mt-16">
+  <div class="max-w-6xl mx-auto px-6">
+    <h3 class="text-xl font-bold mb-3">🎶 Christopher Abimanyu Singing School</h3>
+    <p class="opacity-80">Jl. Sangkuriang A3, Dago – Bandung</p>
+    
+    <!-- Sosial Media -->
+    <div class="flex justify-center gap-6 mt-6">
+      <a href="https://www.instagram.com/casssingingschool/" target="_blank" 
+         class="transform hover:scale-110 transition">
+        <img src="https://img.icons8.com/fluency/48/instagram-new.png" alt="Instagram"/>
+      </a>
+      <a href="https://www.youtube.com/@christopherabimanyusinging8206" target="_blank"
+         class="transform hover:scale-110 transition">
+        <img src="https://img.icons8.com/fluency/48/youtube-play.png" alt="YouTube"/>
+      </a>
+      <a href="https://tiktok.com/@YOUR_TIKTOK" target="_blank"
+         class="transform hover:scale-110 transition">
+        <img src="https://img.icons8.com/fluency/48/tiktok.png" alt="TikTok"/>
+      </a>
+    </div>
+
+    <!-- Copyright -->
+    <p class="mt-6 text-sm opacity-75">
+      © 2025 Christopher Abimanyu Singing Course. Semua Hak Dilindungi.
+    </p>
   </div>
 </footer>
 
@@ -317,6 +359,7 @@
 
 </body>
 </html>
+
 
 
 
