--- a/index.html
+++ b/index.html
@@ -112,11 +112,12 @@
       <h2 class="text-3xl font-extrabold gradient-text mb-4">👨‍🎤 Founder Kami</h2>
       <h3 class="text-xl font-bold mb-2">Christopher Abimanyu</h3>
       <p class="text-lg leading-relaxed">
-        Christopher Abimanyu adalah seorang <b>penyanyi tenor Indonesia</b> 
-        yang telah tampil di berbagai panggung nasional maupun internasional. 
-        Beliau mendirikan <b>Christopher Abimanyu Singing School</b> dengan visi 
-        membimbing generasi muda untuk menemukan suara terbaik mereka 
-        melalui teknik vokal yang benar, ekspresi musikal, dan rasa percaya diri.
+        Christopher Abimanyu Sastrodiharjo atau lebih dikenal dengan nama Christopher Abimanyu
+        lahir di Bandung, Jawa Barat, tahun 1970, adalah penyanyi tenor berkebangsaan Indonesia. 
+        Namanya mulai dikenal sejak memenangi Festival Bintang Radio dan Televisi tingkat Jawa Barat dan nasional, 
+        tahun 1985. Ia mendapatkan ilmu teknik vokal dari Ir. Sudaryanto, Marijke ten Kate, dan Avip Priatna. 
+        Selain tampil di panggung pertunjukan berbagai kota, Christopher juga kerap diundang di sejumlah stasiun televisi
+        antara lain RCTI, Indosiar, dan Trans TV.[1] Bahkan Christopher sering kali tampil dalam ajang Pemilihan Puteri Indonesia setiap tahunnya.
       </p>
     </div>
   </div>
@@ -359,6 +360,7 @@
 
 </body>
 </html>
+
 
 
 
