--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-10 items-center">
     <!-- Foto Founder -->
     <div class="flex justify-center">
-      <img src="assets/founder.jpg" alt="Christopher Abimanyu" 
+      <img src="assets/abi.png" alt="Christopher Abimanyu" 
            class="rounded-2xl shadow-lg max-h-96 object-cover"/>
     </div>
     <!-- Deskripsi -->
@@ -360,6 +360,7 @@
 
 </body>
 </html>
+
 
 
 
