--- a/index.html
+++ b/index.html
@@ -112,12 +112,19 @@
       <h2 class="text-3xl font-extrabold gradient-text mb-4">👨‍🎤 Founder Kami</h2>
       <h3 class="text-xl font-bold mb-2">Christopher Abimanyu</h3>
       <p class="text-lg leading-relaxed">
-        Christopher Abimanyu Sastrodiharjo atau lebih dikenal dengan nama Christopher Abimanyu
-        lahir di Bandung, Jawa Barat, tahun 1970, adalah penyanyi tenor berkebangsaan Indonesia. 
-        Namanya mulai dikenal sejak memenangi Festival Bintang Radio dan Televisi tingkat Jawa Barat dan nasional, 
-        tahun 1985. Ia mendapatkan ilmu teknik vokal dari Ir. Sudaryanto, Marijke ten Kate, dan Avip Priatna. 
-        Selain tampil di panggung pertunjukan berbagai kota, Christopher juga kerap diundang di sejumlah stasiun televisi
-        antara lain RCTI, Indosiar, dan Trans TV.[1] Bahkan Christopher sering kali tampil dalam ajang Pemilihan Puteri Indonesia setiap tahunnya.
+        Christopher Abimanyu Sastrodiharjo (lahir di Bandung, 1970) adalah seorang penyanyi tenor dan guru vokal terkemuka asal Indonesia. 
+        Ia dikenal luas karena kiprahnya dalam dunia musik seriosa, khususnya dalam melestarikan lagu-lagu seriosa Indonesia. 
+        Abimanyu tumbuh dalam lingkungan yang akrab dengan musik klasik opera karena keluarganya sering mendengarkannya. 
+        Lingkungan ini berperan besar dalam membentuk minatnya pada musik sejak dini. Abimanyu mulai mempelajari vokal pada tahun 1985 
+        di bawah bimbingan Ir. Sudaryanto. Ia juga mengasah kemampuannya dengan belajar dari penyanyi sopran Marijke ten Kate dan 
+        konduktor Avip Priyatna. Untuk memperdalam ilmunya, ia bahkan menempuh pendidikan vokal di luar negeri.
+        Namanya mulai dikenal setelah memenangkan Festival Bintang Radio dan Televisi tingkat Jawa Barat dan nasional pada tahun 1985.
+        Ia telah berkolaborasi dengan berbagai orkestra, paduan suara, konduktor, penyanyi pop, dan seniman musik etnik.
+        Abimanyu sangat bersemangat melestarikan lagu-lagu seriosa Indonesia. Ia mewujudkan semangat ini dengan merilis album Sebutir Mutiara pada tahun 2008, 
+        sebuah kumpulan 15 lagu seriosa yang dikerjakan bersama pianis Ine Lopulisa. Ia pernah tampil membawakan lagu kebangsaan Indonesia Raya 
+        dan Padamu Negeri dalam Debat Calon Presiden pada tahun 2014. Abimanyu juga tampil dalam Art Song Series bersama pianis Lendi Sudarno, 
+        menampilkan siklus Die Schöne Müllerin karya F. Schubert secara lengkap. Hingga saat ini, Abimanyu tetap setia dengan gaya bernyanyi klasik, 
+        bahkan saat membawakan lagu-lagu non-klasik
       </p>
     </div>
   </div>
@@ -273,7 +280,7 @@
 
     <!-- Copyright -->
     <p class="mt-6 text-sm opacity-75">
-      © 2025 Christopher Abimanyu Singing Course. Semua Hak Dilindungi.
+      © 2025 Christopher Abimanyu Singing School. Semua Hak Dilindungi.
     </p>
   </div>
 </footer>
@@ -360,6 +367,7 @@
 
 </body>
 </html>
+
 
 
 
