--- a/index.html
+++ b/index.html
@@ -24,6 +24,57 @@
       document.getElementById("mobileMenu").classList.toggle("hidden");
     }
   </script>
+  <style>
+  /* Background gradient animasi */
+  .animated-bg {
+    background: linear-gradient(-45deg, #4f46e5, #ec4899, #f59e0b, #06b6d4);
+    background-size: 400% 400%;
+    animation: gradientBG 15s ease infinite;
+  }
+
+  @keyframes gradientBG {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+  }
+
+  /* Efek not musik */
+  .music-notes {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
+  .music-notes span {
+    position: absolute;
+    bottom: -50px;
+    font-size: 2rem;
+    opacity: 0.7;
+    animation: floatNotes 10s linear infinite;
+  }
+
+  @keyframes floatNotes {
+    0% {
+      transform: translateY(0) scale(1) rotate(0deg);
+      opacity: 0.8;
+    }
+    50% {
+      opacity: 1;
+    }
+    100% {
+      transform: translateY(-120vh) scale(1.5) rotate(360deg);
+      opacity: 0;
+    }
+  }
+
+  /* Posisi acak tiap not */
+  .music-notes span:nth-child(1) { left: 10%; animation-delay: 0s; }
+  .music-notes span:nth-child(2) { left: 30%; animation-delay: 2s; font-size: 1.5rem; }
+  .music-notes span:nth-child(3) { left: 50%; animation-delay: 4s; font-size: 2.2rem; }
+  .music-notes span:nth-child(4) { left: 70%; animation-delay: 6s; font-size: 1.8rem; }
+  .music-notes span:nth-child(5) { left: 85%; animation-delay: 8s; font-size: 2rem; }
+</style>
+
 </head>
 <body class="font-sans bg-gradient-to-br from-pink-50 via-yellow-50 to-blue-50 text-gray-800">
 
@@ -62,20 +113,36 @@
 </nav>
   
 <!-- HERO -->
+<!-- HERO -->
 <section id="hero" 
-  class="bg-gradient-to-r from-indigo-600 to-pink-500 text-white text-center px-6 flex flex-col justify-center items-center"
+  class="text-white text-center px-6 flex flex-col justify-center items-center relative overflow-hidden"
   style="min-height: 100vh;">
-  <h1 class="text-3xl md:text-5xl font-extrabold mb-4 gradient-text">
+  
+  <!-- Background Animasi Gradient -->
+  <div class="absolute inset-0 animated-bg z-[-2]"></div>
+  
+  <!-- Efek Not Musik -->
+  <div class="absolute inset-0 music-notes z-[-1] pointer-events-none">
+    <span>🎵</span>
+    <span>🎶</span>
+    <span>🎼</span>
+    <span>🎵</span>
+    <span>🎶</span>
+  </div>
+
+  <!-- Konten -->
+  <h1 class="text-3xl md:text-5xl font-extrabold mb-4 gradient-text relative z-10">
     Christopher Abimanyu Singing School
   </h1>
-  <p class="text-base md:text-xl mb-6">
+  <p class="text-base md:text-xl mb-6 relative z-10">
     Belajar vokal profesional dengan suasana fun & ceria 🎵
   </p>
   <a href="#daftar" 
-     class="bg-yellow-400 text-indigo-900 px-6 py-3 rounded-lg font-bold hover:bg-yellow-300 transition">
+     class="bg-yellow-400 text-indigo-900 px-6 py-3 rounded-lg font-bold hover:bg-yellow-300 transition relative z-10">
     Daftar Sekarang
   </a>
 </section>
+
 
 <script>
   function adjustHeroPadding() {
@@ -367,6 +434,7 @@
 
 </body>
 </html>
+
 
 
 
